Removed a redundant folder.

--- a/linux_build/xref-tetris.html
+++ b/linux_build/xref-tetris.html
@@ -7445,6 +7445,7 @@ imported by:
  &#8226;   <a href="#pkgutil">pkgutil</a>
  &#8226;   <a href="#py_compile">py_compile</a>
  &#8226;   <a href="#pygame.sysfont">pygame.sysfont</a>
+ &#8226;   <a href="#settings">settings</a>
  &#8226;   <a href="#sysconfig">sysconfig</a>
  &#8226;   <a href="#tetris.py">tetris.py</a>
  &#8226;   <a href="#tracemalloc">tracemalloc</a>
@@ -8778,7 +8779,8 @@ imported by:
   <a target="code" href="/home/connor/Documents/CPSC-254_Tetris/scripts/settings.py" type="text/plain"><tt>settings</tt></a>
 <span class="moduletype">SourceModule</span>  <div class="import">
 imports:
-    <a href="#pygame">pygame</a>
+    <a href="#posixpath">posixpath</a>
+ &#8226;   <a href="#pygame">pygame</a>
  &#8226;   <a href="#random">random</a>
 
   </div>
